--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 
   <!--------------------------------------------------- Our Recent Projects ------------------------------------------>
-  <section id="projects">
+  <section id="projects" class="container-fluid">
     <h1><span style="color:#333">Our Recent </span><span style="color:orange;">Projects</span></h1>
   
     <div class="wrapper">
